improved spacing on image overlay for mobile view; added ontouch = '' for mobile responsiveness on older iphones

--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
           <img class="image__img" src="imgs/brewery-finder-shotsnapp.png" alt="brewery finder">
           <div class="image__overlay">
             <div class="image__title breweryFinder">Brewery Finder</div>
-            <p class="image__description introlight" style="text-align:center;padding:20px">
+            <p class="image__description introlight">
               Javascript, HTML, CSS, Yelp API, OpenBreweryDB API, Google Maps API
             </p>
             <span>
@@ -247,8 +247,6 @@
     </div>
   </div>
   <!-------------------------------------------------- End Footer ----------------------------->
-
-
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -258,8 +256,5 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-
-
 </body>
-
 </html>
