--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <title>Homepage | Robert Greenawalt</title>
 </head>
 
-<body>
+<body ontouchstart="">
 
   <!-- Nav bar ------------------------------------------------------------>
   <nav class="navbar navbar-expand-lg navbar-dark bg-blackp">
