edit margins for project cards; update budget tracker image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <br>
     <div class="row">
       <div class="col-sm-12 greeting">
-        <h1 style="font-size:3.5em; letter-spacing: .1em;">Hello,</h1>
+        <h1 style="font-size:3.5em; letter-spacing: .05em;" >Hello,</h1>
         <h1>
           [ <a href="https://github.com/rsg71" class="text-decoration-none" target="_blank"><i
               class="fab fa-github"></i></a> ,
@@ -137,7 +137,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 restaurantFinder">
+      <div class="col-md-6 restaurantFinder mb-4">
         <div class="image" id="restaurantFinder">
           <img class="image__img" src="imgs/restaurant-finder-shotsnapp-screen.png" alt="restaurant finder">
           <div class="image__overlay">
@@ -156,12 +156,11 @@
       </div>
     </div>
 
-    <br>
 
     <div class="row">
-      <div class="col-md-6 columnMargin">
+      <div class="col-md-6 mb-4">
         <div class="image">
-          <img class="image__img" src="imgs/budget-tool-shotsnapp.png" alt="budget tool">
+          <img class="image__img" src="imgs/budget_tool_shotsnapp.png" alt="budget tool">
           <div class="image__overlay">
             <div class="image__title">Budget Tool</div>
             <p class="image__description introlight">
@@ -175,7 +174,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mb-4">
         <div class="image">
           <img class="image__img" src="imgs/weather-app-rotated-blackbackground2.png" alt="weather app">
           <div class="image__overlay">
@@ -193,17 +192,16 @@
       </div>
     </div>
 
-    <br>
 
     <div class="row">
 
 
-      <div class="col-md-6 columnMargin">
+      <div class="col-md-6 mb-4">
         <div class="image">
           <img class="image__img" src="imgs/brewery-finder-shotsnapp.png" alt="brewery finder">
           <div class="image__overlay">
             <div class="image__title breweryFinder">Brewery Finder</div>
-            <p class="image__description introlight" style="padding:20px">
+            <p class="image__description introlight">
               Javascript, HTML, CSS, Yelp API, OpenBreweryDB API, Google Maps API
             </p>
             <span>
@@ -215,7 +213,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 ">
+      <div class="col-md-6 mb-4">
         <div class="image">
           <img class="image__img" src="imgs/scheduler-window.png" alt="work scheduler">
           <div class="image__overlay">
@@ -233,10 +231,9 @@
       </div>
     </div>
 
-    <br>
 
-    <div class="row">
-      <div class="col-md-6 columnMargin">
+    <div class="row" style="margin-bottom:10em">
+      <div class="col-md-6 mb-4">
         <div class="image">
           <img class="image__img" src="imgs/password-generator-shotsnapp.png" alt="password generator">
           <div class="image__overlay">
@@ -253,7 +250,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mb-4">
         <div class="image">
           <img class="image__img" src="imgs/employee-tracker-shotsnapp.png" alt="employee tracker">
           <div class="image__overlay">
@@ -268,23 +265,14 @@
             </span>
           </div>
         </div>
+
       </div>
-      <br>
-
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
     </div>
+      
 
 
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+   
 
 
   </div>
