changed the logo and favicons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.png" />
+  <link rel="shortcut icon" type="image/jpg" href="imgs/logo_black_dot.png" />
   <!-- devicon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
   <!-- google fonts -->
@@ -33,7 +33,7 @@
 
   <!-- Nav bar ------------------------------------------------------------>
   <nav class="navbar navbar-expand-lg navbar-dark bg-blackp">
-    <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/favicon.png" alt="robert logo"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/logo_white_dot.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
