update resume page with updated image

--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,15 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+
+
+  <!-- wow.js -->
+  <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.js" ></script>
+
   <!-- animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  
   <!-- Css link for footer-->
   <link rel="stylesheet" href="style.css">
   <title>Contact | Robert Greenawalt</title>
@@ -61,13 +68,11 @@
     <h1 class="display-4">Contact</h1>
   </div>
 
-
-
   <main class="container contact">
 
     <div class="row" style="text-align:center; margin:5em 0em 20em ">
-      <div class="col">
-        <h2>Contact me</h2>
+      <div >
+        <h2 class="col">Contact me</h2>
         <h5>Email address:</h5> <a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope"></i>
           robert.greenawalt29@gmail.com</a>
       </div>
@@ -124,5 +129,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+
+    
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
