--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap" rel="stylesheet">
   <!-- animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- wow.js -->
+  <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.js"></script>
   <!-- Css link for footer-->
   <link rel="stylesheet" href="style.css">
 
@@ -64,7 +67,7 @@
     <br>
     <div class="row">
       <div class="col-sm-12 greeting">
-        <h1 style="font-size:3.5em; letter-spacing: .05em;" >Hello,</h1>
+        <h1 style="font-size:3.5em; letter-spacing: .05em;">Hello,</h1>
         <h1>
           [ <a href="https://github.com/rsg71" class="text-decoration-none" target="_blank"><i
               class="fab fa-github"></i></a> ,
@@ -78,12 +81,6 @@
     </div>
     <!-- <br> -->
 
-    <!-- <div class="row">
-      <div class="col-lg-12">
-        <h2> I'm Robert and welcome to my site.</h2>
-      </div>
-
-    </div> -->
 
     <br>
     <div class="row">
@@ -100,180 +97,175 @@
 
     <br>
     <br>
-
-    <!-- <div class="row">
-      <div class="col">
-        <h1 style="letter-spacing: .25em;">...</h1>
-      </div>
-    </div> -->
     <br>
-
-
     <br>
     <br>
 
 
     <div class="row">
       <div class="col-sm-12">
-        <h4 class="">P r o j e c t s :</h4>
+        <h3 class="projects">P r o j e c t s :</h3>
       </div>
       <br>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="image">
-          <img class="image__img" src="imgs/tableturner_menu-iPad-Air-2.png" alt="table turner">
-          <div class="image__overlay">
-            <div class="image__title">Table Turner </div>
-            <p class="image__description introlight">
-              MERN Stack, Passport.js, bcrypt.js
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://tableturner.herokuapp.com/landing">View Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Table-Turner"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
+
+    <div class="projectContainer ">
+
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="image">
+            <img class="image__img" src="imgs/tableturner_menu-iPad-Air-2.png" alt="table turner">
+            <div class="image__overlay">
+              <div class="image__title">Table Turner </div>
+              <p class="image__description introlight">
+                MERN Stack, Passport.js, bcrypt.js
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://tableturner.herokuapp.com/landing">View
+                  Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Table-Turner"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 restaurantFinder mb-4">
+          <div class="image" id="restaurantFinder">
+            <img class="image__img" src="imgs/restaurant-finder-shotsnapp-screen.png" alt="restaurant finder">
+            <div class="image__overlay">
+              <div class="image__title">Restaurant Finder</div>
+              <p class="image__description introlight">
+                Javascript, CSS, HTML, Google Maps API
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://findtherestaurant500.herokuapp.com/">View
+                  Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Restaurant_Finder"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 restaurantFinder mb-4">
-        <div class="image" id="restaurantFinder">
-          <img class="image__img" src="imgs/restaurant-finder-shotsnapp-screen.png" alt="restaurant finder">
-          <div class="image__overlay">
-            <div class="image__title">Restaurant Finder</div>
-            <p class="image__description introlight">
-              Javascript, CSS, HTML, Google Maps API
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://findtherestaurant500.herokuapp.com/">View
-                Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Restaurant_Finder"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
+
+
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <div class="image">
+            <img class="image__img" src="imgs/budget_tool_shotsnapp.png" alt="budget tool">
+            <div class="image__overlay">
+              <div class="image__title">Budget Tool</div>
+              <p class="image__description introlight">
+                Javascript, HTML, CSS
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://budget-tracker-rsg.herokuapp.com/">View
+                  Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Budget_Tracker"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="image">
+            <img class="image__img" src="imgs/weather-app-rotated-blackbackground2.png" alt="weather app">
+            <div class="image__overlay">
+              <div class="image__title">Weather App</div>
+              <p class="image__description introlight">
+                Javascript, HTML, CSS
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Weather-App/">View Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Weather-App"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
           </div>
         </div>
       </div>
+
+
+      <div class="row">
+
+
+        <div class="col-md-6 mb-4">
+          <div class="image">
+            <img class="image__img" src="imgs/brewery-finder-shotsnapp.png" alt="brewery finder">
+            <div class="image__overlay">
+              <div class="image__title breweryFinder">Brewery Finder</div>
+              <p class="image__description introlight">
+                Javascript, HTML, CSS, Yelp API, OpenBreweryDB API, Google Maps API
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://lambaa94.github.io/Brewery-Finder/">View
+                  Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Brewery-Finder"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="image">
+            <img class="image__img" src="imgs/scheduler-window.png" alt="work scheduler">
+            <div class="image__overlay">
+              <div class="image__title">Work Day Scheduler</div>
+              <p class="image__description introlight">
+                Javascript, HTML, CSS
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Work-Scheduler/">View Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Work-Scheduler"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row" style="margin-bottom:10em">
+        <div class="col-md-6 mb-4">
+          <div class="image">
+            <img class="image__img" src="imgs/password-generator-shotsnapp.png" alt="password generator">
+            <div class="image__overlay">
+              <div class="image__title">Password Generator</div>
+              <p class="image__description introlight">
+                Javascript, HTML, CSS
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Password-Generator/">View
+                  Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Password-Generator"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="image">
+            <img class="image__img" src="imgs/employee-tracker-shotsnapp.png" alt="employee tracker">
+            <div class="image__overlay">
+              <div class="image__title">Employee Tracker</div>
+              <p class="image__description introlight">
+                Javascript
+              </p>
+              <span>
+                <a class="btn btn-light" target="_blank" href="https://github.com/rsg71/Employee_Tracker">View
+                  Project</a>
+                <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Employee_Tracker"> <i
+                    class="fas fa-code"></i> View Code</a>
+              </span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
-
-
-    <div class="row">
-      <div class="col-md-6 mb-4">
-        <div class="image">
-          <img class="image__img" src="imgs/budget_tool_shotsnapp.png" alt="budget tool">
-          <div class="image__overlay">
-            <div class="image__title">Budget Tool</div>
-            <p class="image__description introlight">
-              Javascript, HTML, CSS
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://budget-tracker-rsg.herokuapp.com/">View Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Budget_Tracker"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 mb-4">
-        <div class="image">
-          <img class="image__img" src="imgs/weather-app-rotated-blackbackground2.png" alt="weather app">
-          <div class="image__overlay">
-            <div class="image__title">Weather App</div>
-            <p class="image__description introlight">
-              Javascript, HTML, CSS
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Weather-App/">View Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Weather-App"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="row">
-
-
-      <div class="col-md-6 mb-4">
-        <div class="image">
-          <img class="image__img" src="imgs/brewery-finder-shotsnapp.png" alt="brewery finder">
-          <div class="image__overlay">
-            <div class="image__title breweryFinder">Brewery Finder</div>
-            <p class="image__description introlight">
-              Javascript, HTML, CSS, Yelp API, OpenBreweryDB API, Google Maps API
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://lambaa94.github.io/Brewery-Finder/">View
-                Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Brewery-Finder"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 mb-4">
-        <div class="image">
-          <img class="image__img" src="imgs/scheduler-window.png" alt="work scheduler">
-          <div class="image__overlay">
-            <div class="image__title">Work Day Scheduler</div>
-            <p class="image__description introlight">
-              Javascript, HTML, CSS
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Work-Scheduler/">View Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Work-Scheduler"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="row" style="margin-bottom:10em">
-      <div class="col-md-6 mb-4">
-        <div class="image">
-          <img class="image__img" src="imgs/password-generator-shotsnapp.png" alt="password generator">
-          <div class="image__overlay">
-            <div class="image__title">Password Generator</div>
-            <p class="image__description introlight">
-              Javascript, HTML, CSS
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Password-Generator/">View
-                Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Password-Generator"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 mb-4">
-        <div class="image">
-          <img class="image__img" src="imgs/employee-tracker-shotsnapp.png" alt="employee tracker">
-          <div class="image__overlay">
-            <div class="image__title">Employee Tracker</div>
-            <p class="image__description introlight">
-              Javascript
-            </p>
-            <span>
-              <a class="btn btn-light" target="_blank" href="https://github.com/rsg71/Employee_Tracker">View Project</a>
-              <a class="btn btn-dark" target="_blank" href="https://github.com/rsg71/Employee_Tracker"> <i
-                  class="fas fa-code"></i> View Code</a>
-            </span>
-          </div>
-        </div>
-
-      </div>
-    </div>
-      
-
-
-
-   
-
 
   </div>
 
@@ -309,7 +301,7 @@
 
   <!-------------------------------------------------- End Footer ----------------------------->
   <script type="text/javascript">
-  
+
 
   </script>
 
@@ -322,5 +314,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
+
 </html>
