updating margin on contact page

--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
   <main class="container contact">
 
     <div class="row" style="text-align:center; margin:5em 0em 20em ">
-      <div >
-        <h2 class="col">Contact me</h2>
+      <div class="col">
+        <h2 >Contact me</h2>
         <h5>Email address:</h5> <a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope"></i>
           robert.greenawalt29@gmail.com</a>
       </div>
