--- a/portfolio.html
+++ b/portfolio.html
@@ -225,19 +225,19 @@
 
   <div class="container-fluid fluidFooter" style="text-align: center;">
     <div class="row">
-      <div class="col">
+      <div class="col-sm-4">
         <h5>Account Links</h5>
         <p><a href="https://github.com/rsg71" target="_blank">Github <i class="fab fa-github"></i></a></p>
         <p><a href="https://www.linkedin.com/in/robert-greenawalt/" target="_blank">LinkedIn <i
               class="fab fa-linkedin"></i></a></p>
       </div>
-      <div class="col">
+      <div class="col-sm-4">
         <h5>Site Navigation</h5>
         <p><a href="portfolio.html">Portfolio</a></p>
         <p><a href="resume.html">Resume</a></p>
         <p><a href="contact.html">Contact</a></p>
       </div>
-      <div class="col">
+      <div class="col-sm-4">
         <h5>Get in Touch</h5>
         <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
             robert.greenawalt29@gmail.com</a></p>
