--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="image__overlay">
               <div class="image__title">Restaurant Finder</div>
               <p class="image__description introlight">
-                Javascript, CSS, HTML, Google Maps API
+                MySQL, Express, Node, Passport, Javascript, <br/> Google Maps API
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://findtherestaurant500.herokuapp.com/">View
@@ -158,7 +158,7 @@
             <div class="image__overlay">
               <div class="image__title">Budget Tool</div>
               <p class="image__description introlight">
-                Javascript, HTML, CSS
+                Javascript, Express, Node
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://budget-tracker-rsg.herokuapp.com/">View
@@ -175,7 +175,7 @@
             <div class="image__overlay">
               <div class="image__title">Weather App</div>
               <p class="image__description introlight">
-                Javascript, HTML, CSS
+                Javascript, Open Weather API
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Weather-App/">View Project</a>
@@ -197,7 +197,7 @@
             <div class="image__overlay">
               <div class="image__title breweryFinder">Brewery Finder</div>
               <p class="image__description introlight">
-                Javascript, HTML, CSS, Yelp API, OpenBreweryDB API, Google Maps API
+                Javascript, Yelp API, OpenBreweryDB API, <br> Google Maps API
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://lambaa94.github.io/Brewery-Finder/">View
@@ -214,7 +214,7 @@
             <div class="image__overlay">
               <div class="image__title">Work Day Scheduler</div>
               <p class="image__description introlight">
-                Javascript, HTML, CSS
+                Javascript, Moment.js
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Work-Scheduler/">View Project</a>
@@ -234,7 +234,7 @@
             <div class="image__overlay">
               <div class="image__title">Password Generator</div>
               <p class="image__description introlight">
-                Javascript, HTML, CSS
+                Javascript
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://rsg71.github.io/Password-Generator/">View
