implemented fadeIn for index page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="container mx-auto">
     <br>
     <br>
-    <div class="row">
+    <div class="row animate__animated animate__fadeIn">
       <div class="col-sm-12 greeting">
         <h1 style="font-size:3.5em; letter-spacing: .05em;" id="introHello">Hello,</h1>
         <h1>
@@ -92,9 +92,9 @@
 
 
     <br>
-    <div class="row">
+    <div class="row animate__animated animate__fadeIn">
       <div class="col-sm-12">
-        <h2 class=""> I'm Robert, a <em class="recursiveFont">full-stack developer</em> and lifelong learner.</h2>
+        <h2> I'm Robert, a <em class="recursiveFont">full-stack developer</em> and lifelong learner.</h2>
         <br>
         <p class="coreCompetencies">Core competencies include: MongoDB, MySQL, Express, React, and Node. Check
           out
@@ -113,16 +113,16 @@
 
     <div class="row">
       <div class="col-sm-12">
-        <h3 class="projects">P r o j e c t s :</h3>
+        <h3 class="projects animate__animated animate__fadeIn">P r o j e c t s :</h3>
       </div>
       <br>
     </div>
 
 
-    <div class="projectContainer ">
+    <div class="projectContainer">
 
 
-      <div class="row">
+      <div class="row animate__animated animate__fadeIn">
         <div class="col-md-6">
           <div class="image">
             <img class="image__img" src="imgs/tableturner_menu-iPad-Air-2.png" alt="table turner">
