--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body ontouchstart="">
 
   <!-- Nav bar ------------------------------------------------------------>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-blackp">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blackp animate__animated animate__fadeInDown" >
     <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/logo_white_dot.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
