--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       </div>
       <div class="col">
         <h5>Get in Touch</h5>
-        <p><a href="mailto:robert.greenawalt29@gmail.com"><i class="fas fa-envelope" style="font-size: .7rem;"></i>
+        <p><a href="mailto:robert.greenawalt29@gmail.com">
             robert.greenawalt29@gmail.com</a></p>
       </div>
     </div>
